# rig-multi-agent

./: .env.example  Cargo.toml  EXAMPLE.md  README.md
src/: config.rs  lib.rs  main.rs
src/agents/: map.rs  mod.rs  query.rs  reduce.rs
src/surreal/: mod.rs  schema.rs  select.rs
