[package]
name = "rig-tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
rig-core = { version = "0.14.0", features = ["mcp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mcp-core = { version = "0.1.50", features = [
    "sse",
] } # For MCP protocol support with SSE
mcp-core-macros = "0.1" # For tool macros
surrealdb = { version = "2.0", features = ["kv-mem", "protocol-ws"] }
dotenv = "0.15"
